# haskell-stack-trace-plugin

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Readme.md  haskell-stack-trace-plugin.cabal
.github/workflows/: cabal.yml
example/: Main.hs
src/StackTrace/: Plugin.hs
test/StackTrace/: PluginSpec.hs
test/resource/: ghc.output  ghc86.output
