name:                haskell-stack-trace-plugin
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Shinya Yamaguchi
maintainer:          ingronze@gmail.com
copyright:           2018 Shinya Yamaguchi
category:            Compiler Plugin
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  build-depends:
    base >=4.12 && <4.13,
    ghc==8.6.2

  exposed-modules:
    StackTrace.Plugin

  default-language: Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example
  default-language: Haskell2010
  ghc-options:
    -fplugin=StackTrace.Plugin
  build-depends:
    base >=4.12 && <4.13,
    haskell-stack-trace-plugin