name:                haskell-stack-trace-plugin
version:             0.1.0.1
synopsis:            haskell-stack-trace-plugin
description:         This plugin allow implicitly add HasCallStack class to every top-level function for all module. Hence, we can to get completely continuous call stack.
homepage:            https://github.com/waddlaw/haskell-stack-trace-plugin
bug-reports:         https://github.com/waddlaw/haskell-stack-trace-plugin/issues
license:             MIT
license-file:        LICENSE
author:              Shinya Yamaguchi
maintainer:          ingronze@gmail.com
copyright:           2018-2020 Shinya Yamaguchi
category:            Compiler Plugin, Development, Debug
build-type:          Simple
extra-source-files:  CHANGELOG.md, Readme.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

source-repository head
  type:     git
  location: git://github.com/waddlaw/haskell-stack-trace-plugin

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs: src
  build-depends:
    base >=4.12 && <4.13,
    ghc>=8.6.2 && <8.6.6

  exposed-modules:
    StackTrace.Plugin

  if flag(dev)
    ghc-options:      -Wall -Werror -Wcompat
                      -- -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
                      -Wno-missing-home-modules
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite test
  main-is:            Spec.hs
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  build-depends:
    base >=4.12 && <4.13,
    bytestring >= 0.10.8 && <0.11,
    hspec >= 2.7 && <2.8,
    typed-process >= 0.2.6 && <0.2.9

  build-tool-depends:
    hspec-discover:hspec-discover >= 2.7 && <2.8

  other-modules: StackTrace.PluginSpec

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall

  default-language:   Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs: example
  default-language: Haskell2010
  ghc-options:
    -fplugin=StackTrace.Plugin
  build-depends:
    base >=4.12 && <4.13,
    haskell-stack-trace-plugin
